# test

./: .env  .env.cloud.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  package-lock.json  push-to-github.sh  replace-dialogs.sh  test-cross-device-sse.sh  test-departments.js  test-simple.dxf  test-sse.sh  图纸管理功能设计文档.md  板材库存管理设计文档.md  清理Service Worker.md  激光切割生产管理系统开发任务.md  激光切割生产管理系统设计文档.md  环境配置说明.md
backend/: .env  add-operation-history.js  add-past-project-fields.js  add-user.js  create-inventory-data.js  create-sample-data.js  create-workers.js  fix-users.js  link-users-workers.js  package-lock.json  package.json
backend/src/: app.js  websocket.js.backup
frontend/: .env.local  .env.production  debug.sh  dev-https.js  next.config.electron.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  高春强.sh
frontend-vue/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend-vue/src/: App.tsx  main.ts
frontend-vue/src-tauri/: Cargo.toml  tauri.conf.json
frontend-vue/src-tauri/icons/: icon.icns
frontend-vue/src-tauri/src/: lib.rs  main.rs
frontend/app/: layout.tsx  page.tsx
frontend/contexts/: AuthContext.tsx
frontend/electron/: main-ssr.js  main.js  preload.js
frontend/stores/: index.ts  materialStore.ts  notificationStore.ts  projectStore.ts
frontend/types/: electron.d.ts
frontend/utils/: apiClient.ts  apiConfig.ts  audioManager.ts  backendDetector.ts  cadDetector.js  cadFileHandler.ts  configManager.ts  electronCADHandler.js  envConfig.ts  (+3 more)
(+164 files in other folders)
