[package]
name = "laser-cutting-manager"
version = "1.0.0"
description = "激光切割生产管理系统"
authors = ["激光切割管理团队"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "laser_cutting_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE THIS
custom-protocol = ["tauri/custom-protocol"]
